--- a/editor/plugins/widget/dev/widgetstyles.html
+++ b/editor/plugins/widget/dev/widgetstyles.html
@@ -8,7 +8,8 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 	<meta charset="utf-8">
 	<title>Applying styles to widgets &mdash; CKEditor Sample</title>
 	<script src="../../../ckeditor.js"></script>
-	<link rel="stylesheet" href="../../../samples/old/sample.css">
+	<script src="../../../samples/sample.js"></script>
+	<link rel="stylesheet" href="../../../samples/sample.css">
 	<link rel="stylesheet" href="../../../contents.css">
 	<link rel="stylesheet" href="assets/contents.css">
 </head>
